<resources>
    <string name="app_name">ChatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="login.">Login...</string>
</resources>
